--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -40,4 +40,44 @@ info:
   build.artifactId: $project.artifactId$
   build.version: $project.version$
 
+---
+
+server:
+  port: 8001
+spring:
+  profiles:
+    active: dev
+  application:
+    name: microservicecloud-dept #对外暴露的微服务名称
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource #当前数据源操作类型
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/cloud02
+    username: root
+    password: x5
+    dbcp2:
+      min-idle: 5  #数据库连接池的最小维持连接数
+      initial-size: 5  #初始化连接数
+      max-total: 5  #最大连接数
+      max-wait-millis: 200 #等待连接获取的最大超时时间
+
+mybatis:
+  config-location: classpath:/mybatis/mybatis-config.xml #mybatis全局配置文件
+  mapper-locations: classpath:/mybatis/mapper/**/*.xml  #mybatis mapper 映射文件
+  type-aliases-package: com.jjx.springcloud.entities #所有entity别名类的所在包
+
+eureka:
+  client:  #将客户端注册进Eureka服务列表内
+    service-url:
+      #defaultZone: http://localhost:7001/eureka #Eureka注册服务中心地址（microservicecloud-eureka-7001->application.yml:service-url:defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/） 单机版
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/  #集群配置
+  instance:
+    instance-id: microserviceclouddept8001 #自定义服务器名称，为服务器起别名（Status：UP (1) - localhost:microservicecloud-dept:8001）
+    prefer-ip-address: true #访问路径可以显示IP地址
+info:
+  app.name: jjx-microservicecloud
+  company.name: www.baidu.com
+  build.artifactId: $project.artifactId$
+  build.version: $project.version$
+
 
