--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -30,7 +30,7 @@ eureka:
   client:  #将客户端注册进Eureka服务列表内
     service-url:
       #defaultZone: http://localhost:7001/eureka #Eureka注册服务中心地址（microservicecloud-eureka-7001->application.yml:service-url:defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/） 单机版
-      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/  #集群配置
+      defaultZone: http://eureka7001.com:7001/eureka/ #集群配置
   instance:
     instance-id: microserviceclouddept8001 #自定义服务器名称，为服务器起别名（Status：UP (1) - localhost:microservicecloud-dept:8001）
     prefer-ip-address: true #访问路径可以显示IP地址
@@ -46,9 +46,9 @@ server:
   port: 8001
 spring:
   profiles:
-    active: dev
+    active: test
   application:
-    name: microservicecloud-dept #对外暴露的微服务名称
+    name: microservicecloud-test #对外暴露的微服务名称
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource #当前数据源操作类型
     driver-class-name: com.mysql.jdbc.Driver
@@ -70,7 +70,7 @@ eureka:
   client:  #将客户端注册进Eureka服务列表内
     service-url:
       #defaultZone: http://localhost:7001/eureka #Eureka注册服务中心地址（microservicecloud-eureka-7001->application.yml:service-url:defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/） 单机版
-      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/  #集群配置
+      defaultZone: http://eureka7001.com:7001/eureka/  #集群配置
   instance:
     instance-id: microserviceclouddept8001 #自定义服务器名称，为服务器起别名（Status：UP (1) - localhost:microservicecloud-dept:8001）
     prefer-ip-address: true #访问路径可以显示IP地址
