--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -8,7 +8,7 @@ spring:
   profiles:
     active: dev
   application:
-    name: microservicecloud-dept #对外暴露的微服务名称
+    name: microservicecloud-dept-dev #对外暴露的微服务名称
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource #当前数据源操作类型
     driver-class-name: com.mysql.jdbc.Driver
@@ -43,12 +43,12 @@ info:
 ---
 
 server:
-  port: 8001
+  port: 8004
 spring:
   profiles:
     active: test
   application:
-    name: microservicecloud-test #对外暴露的微服务名称
+    name: microservicecloud-dept-test #对外暴露的微服务名称
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource #当前数据源操作类型
     driver-class-name: com.mysql.jdbc.Driver
